test/compile-fail/resolution/pub/in-unresolved/expected.txt
error: unresolved mod `b`
  ┌─ ./test/compile-fail/resolution/pub/in-unresolved/top.rhdl:1:15
  │
1 │ pub(in crate::b) struct a {}
  │               ^ no `b` mod in `crate`

